<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dieta">

    <fragment
        android:id="@+id/navigation_dieta"
        android:name="com.camilaoliveira.proyecto00.ui.dieta.DietaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dieta" />

    <fragment
        android:id="@+id/navigation_recetas"
        android:name="com.camilaoliveira.proyecto00.ui.recetas.RecetasFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_recetas" />
    <fragment
        android:id="@+id/navigation_lista_compras"
        android:name="com.camilaoliveira.proyecto00.ui.lista_compras.ListaComprasFragment"
        android:label="@string/listacompras"
        tools:layout="@layout/fragment_lista_compras" />

</navigation>